--- a/rest-api-with-node-js/package.json
+++ b/rest-api-with-node-js/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "gulp": "^4.0.2",
+    "gulp-mocha": "^7.0.1",
+    "gulp-nodemon": "^2.4.2",
     "mongodb": "^3.3.0",
-    "mongoose": "^5.6.10"
+    "mongoose": "^5.6.10",
+    "should": "^13.2.3",
+    "sinon": "^7.4.1"
   }
 }
