--- a/rest-api-with-node-js/package.json
+++ b/rest-api-with-node-js/package.json
@@ -18,5 +18,9 @@
     "mongoose": "^5.6.10",
     "should": "^13.2.3",
     "sinon": "^7.4.1"
+  },
+  "devDependencies": {
+    "gulp-env": "^0.4.0",
+    "supertest": "^4.0.2"
   }
 }
